@@ -1,3 +1,7 @@
+2006-06-20  Tania Bento  <tbento@redhat.com>
+
+	* gnu/testlet/javax/swing/JMenu/constructors.java: New test.
+
 2006-06-20  Gary Benson  <gbenson@redhat.com>
 
 	* gnu/testlet/java/awt/Toolkit/security.java: New test.
